# ncdu-win-qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_ZH.md  app.manifest
locales/: en.json  zh.json
scripts/: build.bat  installer.iss  version.iss.in
src/: main.cpp  version.h.in
src/cleanup/: CleanupPanel.cpp  CleanupPanel.h  CleanupScanner.cpp  CleanupScanner.h  CleanupTarget.h  CleanupWorker.cpp  CleanupWorker.h  DuplicateScanner.cpp  DuplicateScanner.h
src/core/: DiskScanner.cpp  DiskScanner.h  FileNode.h  FormatHelpers.cpp  FormatHelpers.h  I18n.cpp  I18n.h  Identify.cpp  Identify.h  Logger.cpp  Logger.h  MemoryMonitor.h  MftScanner.cpp  MftScanner.h  WinApi.cpp  WinApi.h
src/ui/: BreadcrumbBar.cpp  BreadcrumbBar.h  LegendBar.cpp  LegendBar.h  MainWindow.cpp  MainWindow.h  SizeBarDelegate.cpp  SizeBarDelegate.h  Style.h  TreemapWidget.cpp  TreemapWidget.h
tests/: compare_scanners.cpp  test_scanner.cpp
